# ultrades-ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
core/: AutomatonNode.py
scripts/: example.json  simple_plant.py
